2003-01-24  Elizabeth Thomas <eathomas93@aol.com>

	*Makefile.global.in,README - add $(PURIFY) variable back from 3.4 to facilitate 
        easy purify compile 

        *configure - make gcc the default value for $CC (instead of cc)

2003-01-23  Elizabeth Thomas <eathomas93@aol.com>

	* Tagged first 4.0 beta: aolserver_v4_r0_beta_1

2003-01-19  Nathan Folkman <shmooved@aol.com>

        * nscp/nscp.c: Cleaned up log messages to be more consistent 
        with other server messages. Moved user name from thread name into
        log notice. Control port logging now disabled by default. Added
        more detailed configuration instructions to sample-config.tcl.

2003-01-18  Jim Davidson <jgdavidson@aol.com>

	* nsd/auth.c:
	* nsd/conn.c:
	* nsd/form.c:
	* nsd/httptime.c:
	* nsd/info.c:
	* nsd/log.c:
	* nsd/mimetypes.c:
	* nsd/nsconf.c:
	* nsd/nsd.h:
	* nsd/nsmain.c:
	* nsd/pathname.c:
	* nsd/random.c:
	* nsd/tclcmds.c:
	* nsd/tclfile.c:
	* nsd/tclhttp.c:
	* nsd/tclimg.c:
	* nsd/tclinit.c:
	* nsd/tclmisc.c:
	* nsd/tclrequest.c:
	* nsd/tclresp.c:
	* nsd/tclset.c:
	* nsd/tclsock.c:
	* nsd/tclthread.c:
	* nsd/urlencode.c:
	* nsd/urlopen.c:  Removed old string commands.

	* nsd/conn.c:
	* nsd/connio.c:
	* nsd/driver.c:
	* nsd/init.c:
	* nsd/nsd.h:
	* nsd/queue.c:
	* nsd/return.c:
	* nsd/server.c:
	* nsd/tclinit.c:  Moved Host header mapping code from
	queue.c to driver.c to catch cases of unmapped Host's.
	Also, updated the Conn and Sock structures to maintain the
	servPtr and location correctly Host header based connections.

	* nsthread/Makefile:
	* nsthread/cond.c (removed):
	* nsthread/error.c:
	* nsthread/memory.c:
	* nsthread/mutex.c:
	* nsthread/nsthreadtest.c:
	* nsthread/pthread.c (added):
	* nsthread/reentrant.c:
	* nsthread/thread.c:
	* nsthread/thread.h:
	* nsthread/time.c:
	* nsthread/tls.c:
	* nsthread/winthread.c (added):
	* include/nsthread.h:  Brought forward nsthread library
	from 3.5 which includes support for Win32.

